# avitoparser

./: README.md  async_playwrite_parser.py  make_excel_from_ocr_output.py  multitabs_pars_avito.py  multitabs_pars_test.py  par_avito.py  pars_from_urls_avito.py  parser.py  phones.xlsx  playwrite_avito_pars.py  pyproject.toml  test_smart_pars.py  АВТОСАЛОН 09.11 2000.xlsx  АВТОСАЛОН 11.11.xlsx
avito_phones_parser_script/: dom_utils.py  human.py  input_urls.py  io_progress.py  pool.py  pw_selectors.py  run.py  settings.py  status.py
avito_phones_playwright/: phones_map.json
avito_phones_playwright/debug/: 7298705145.html  7537233787.html  7559046134.html  7648560109.html  7675259053.html  7677167214.html  7689749583.html  7701247705.html  7705292636.html  7709144750.html  7709456966.html  7709490941.html  7709651296.html  7723630806.html  7730119962.html  7732836952.html  7732990796.html  7750540150.html  7758102768.html  7759724339.html  7759917751.html  7760477594.html  7769365924.html  7769603251.html  7771507388.html  7772926867.html  7778822551.html  7789031010.html  7807131463.html  7807180617.html  7807591282.html  7807821966.html  7813080035.html  7830440138.html  7831413527.html  7831909645.html
