[project]
name = "avitoparser"
version = "0.1.0"
description = ""
authors = [
    {name = "Namra404",email = "armeno123@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "playwright (>=1.55.0,<2.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
